<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{617330db-b8e1-492e-94bc-52a923c83901}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	isFirstStart : BOOL := TRUE;
	valve_01 : FB_Valve_monostable;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Set IN(IT)
valve_01.MaxOpenCloseDuration := 180;// this setting can be reduced during test without the fysical Valve

IF isFirstStart THEN
	// Init the Valve at startup (for test/demo)
	GVL_VCM.io_values.I_isClosed := TRUE;
END_IF

// Do stuff
valve_01(Valve:= GVL_VCM.valve01, I_O:= GVL_VCM.io_values);

isFirstStart := FALSE;

// for debugging, can be removed after FAT
GVL_VCM.io_values.I_isOpen;
GVL_VCM.io_values.I_isClosed;
GVL_VCM.io_values.I_hasFailure;
GVL_VCM.io_values.O_setOpen;

GVL_VCM.valve01.Alm.InAlarm;
GVL_VCM.valve01.Alm.GeneralFailure;
GVL_VCM.valve01.Alm.TimeFailure;]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="7" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="42" Count="1" />
      <LineId Id="37" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="69" Count="1" />
      <LineId Id="45" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="72" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>